# evaluator

./: README.md  __init__.py  pyproject.toml
demo/data/eval-tests/foobar/: __init__.py  test_data_processor.py
demo/scripts/: Dockerfile  build_container.sh  run_utpr_eval.py  start_container.sh  stop_container.sh
evaluators/: __init__.py  base.py  patch_similarity.py
src/evaluator/: __init__.py
src/evaluator/evaluators/: __init__.py  patch_similarity.py  unit_test_pass_rate.py
src/evaluator/utils/: __init__.py  ast_utils.py  git_utils.py  mig_diff_filter.py  patch_utils.py  unit_test_utils.py
utils/: __init__.py  ast_utils.py  git_utils.py  patch_utils.py
